; ModuleID = '/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_rpc_query_timeout.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/rpc-proxy/extr_rpc-proxy.c_rpc_query_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rpc_query = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rpc_query*)* @rpc_query_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rpc_query_timeout(%struct.rpc_query* %0) #0 {
  %2 = alloca %struct.rpc_query*, align 8
  %3 = alloca i32, align 4
  store %struct.rpc_query* %0, %struct.rpc_query** %2, align 8
  %4 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %5 = call i32 @query_on_alarm(%struct.rpc_query* %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp sgt i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %12

9:                                                ; preds = %1
  %10 = load %struct.rpc_query*, %struct.rpc_query** %2, align 8
  %11 = call i32 @delete_rpc_query(%struct.rpc_query* %10)
  br label %12

12:                                               ; preds = %9, %8
  ret void
}

declare dso_local i32 @query_on_alarm(%struct.rpc_query*) #1

declare dso_local i32 @delete_rpc_query(%struct.rpc_query*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
